<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/fragment_auth">

    <fragment
        android:id="@+id/fragment_auth"
        android:name="com.example.vkcloud.ui.auth.AuthFragment"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_fragment_auth_to_nav_documents"
            app:destination="@id/nav_documents"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/fragment_auth"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_documents"
        android:name="com.example.vkcloud.ui.document.DocumentsFragment"
        android:label="@string/documents_title"
        tools:layout="@layout/fragment_documents" />
    <fragment
        android:id="@+id/nav_albums"
        android:name="com.example.vkcloud.ui.albums.AlbumsFragment"
        android:label="@string/albums_title"
        tools:layout="@layout/fragment_albums">
        <action
            android:id="@+id/action_nav_albums_to_albumFragment"
            app:destination="@id/fragment_album"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.vkcloud.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragment_album"
        android:name="com.example.vkcloud.ui.albums.AlbumFragment"
        tools:layout="@layout/fragment_album">
        <argument
            android:name="album"
            app:argType="com.vk.sdk.api.photos.dto.PhotosPhotoAlbumFull" />
        <action
            android:id="@+id/action_fragment_album_to_fragment_photo"
            app:destination="@id/fragment_photo"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_photo"
        android:name="com.example.vkcloud.ui.albums.photo.PhotoFragment"
        tools:layout="@layout/fragment_photo">
        <argument
            android:name="photos"
            app:argType="com.vk.sdk.api.photos.dto.PhotosPhoto[]" />
        <argument
            android:name="choosenPhoto"
            app:argType="com.vk.sdk.api.photos.dto.PhotosPhoto" />
    </fragment>

    <action
        android:id="@+id/action_auth"
        app:destination="@id/fragment_auth"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:launchSingleTop="true"
        app:popEnterAnim="@anim/nav_default_enter_anim"
        app:popExitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/navigation"
        app:popUpToInclusive="true" />
</navigation>